--- a/stylesheet/memberStyle.css
+++ b/stylesheet/memberStyle.css
@@ -1,18 +1,32 @@
 .memberBody {
 	float: right;	
+	width: 770px;
 	padding: 10px 0px 0px 20px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 0px;
-  margin-bottom: 0px;
-  width: 780px;
-  background: red;
+  margin-bottom: 20px;
 }
 
 .memberLinks {
   float: left;
   padding: 10px 10px 10px 10px;
   width: 110px;
-  background: gold;
+  background: #6ac857;
+  overflow:auto;
 }
 
+.memberLinks ul {
+  list-style: none;
+  margin: 0px;
+  padding: 0px 0px 0px 0px;
+  border: none;
+}
+
+.memberLinks li {
+  font-size: 10pt;
+  list-style: none;
+  margin: 0px 0px 10px 0px;
+  padding: 0px;
+  border: 0px;
+}
