--- a/themes/default/stylesheets/memberStyle.css
+++ b/themes/default/stylesheets/memberStyle.css
@@ -25,8 +25,9 @@ padding: 1px 0px 0px 10px;
   float: left;
   padding: 10px 10px 10px 10px;
   width: 110px;
-  background: #6ac857;
+  background: #8fdb8f;
   overflow:auto;
+	font-size: 13px;
 }
 
 .memberLinks ul {
@@ -37,9 +38,27 @@ padding: 1px 0px 0px 10px;
 }
 
 .memberLinks li {
-  font-size: 10pt;
+  font-size: 12px;
   list-style: none;
-  margin: 0px 0px 10px 0px;
+  margin: 0px 0px 5px 0px;
   padding: 0px;
   border: 0px;
+}
+
+.memberLinks a, .memberLinks p {
+	font-size: 12px;
+}
+
+.memberLinks .memberLinkHeadingTopDiv {
+	font-weight: bold;
+	border-bottom: 1px solid green;
+	margin: 5px 0px 5px 0px;
+	padding: 0px 0px 2px 0px;
+}
+
+.memberLinks .memberLinkHeading {
+	font-weight: bold;
+	border-bottom: 1px solid green;
+	margin: 20px 0px 5px 0px;
+	padding: 0px 0px 2px 0px;
 }
